--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "yaqrcode",
-    "description": "Yet another node-qrcode Generator! Simple and pure javascript!",
-    "version": "0.2.1",
-    "author": "Zeno Zeng <zenoofzeng@gmail.com>",
+    "description": "Yet another node-qrcode Generator! Simple and pure javascript! Forked from https://github.com/moselhy/node-yaqrcode and published with types",
+    "version": "0.3.0",
+    "author": "Mohamed Moselhy",
     "scripts": {
         "test": "istanbul cover _mocha"
     },
@@ -10,9 +10,10 @@
         "qrcode",
         "qr"
     ],
-    "homepage": "http://github.com/zenozeng/node-yaqrcode",
+    "homepage": "http://github.com/moselhy/node-yaqrcode",
     "repository": {
         "type": "git",
-        "url": "git://github.com/zenozeng/node-yaqrcode"
-    }
+        "url": "git://github.com/moselhy/node-yaqrcode"
+    },
+    "types": "./index.d.ts"
 }
